added dependencies and fixed errorrs